--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
   </head>
     <body>
       <section>
-        <h1 id="temperature">Temperature</h1>
-        <ul>
-          <button id="temperature-increase">+</button>
-          <button id="temperature-decrease">-</button>
-          <button id="temperature-reset">Reset</button>
-          <button id="switchpowersaving-off">Power save</button>
-        </ul>
+        <h1>Temperature:</h1>
+        <div>
+          <ul>
+            <button id="temperature-increase">+</button>
+            <button id="temperature-decrease">-</button>
+            <button id="temperature-reset">Reset</button>
+            <button id="switchpowersaving-off">Power save</button>
+          </ul>
+      </div>
       </section>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
       <script src="src/thermostat.js"></script>
+      <div id="temperature">
+
+      </div>
     </body>
 </html>
