--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
     <body>
       <section>
-        <h1>Temperature:</h1>
+        <h1>Temperature: <div id="temperature"></div></h1>
         <div>
           <ul>
             <button id="temperature-increase">+</button>
@@ -15,10 +15,8 @@
           </ul>
       </div>
       </section>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+      <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
       <script src="src/thermostat.js"></script>
-      <div id="temperature">
-
-      </div>
+      <!-- <div id="temperature"></div> -->
     </body>
 </html>
