Jquery methods to page

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <button id="switchpowersaving-off">Power save</button>
           </ul>
       </div>
+      Powersave: <div id="powersave"></div>
       </section>
       <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
       <script src="src/thermostat.js"></script>
-      <!-- <div id="temperature"></div> -->
     </body>
 </html>
