--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
   <title>Thermostat</title>
-
-
+  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="interface.js"></script>
+  <h1>Welcome to the most advanced Thermostat of the Cosmos!</h1>
+  <h2>You can easily use it with the below buttons</h2>
 </head>
 <body>
+  <h2 id="temperature"></h2>
   <button id="show">Show Temperature</button>
   <button id="increse">Increase Temperature</button>
   <button id="decrease">Decrease Temperature</button>
@@ -13,5 +16,6 @@
   <button id="SwitchPowerSaving">Power Saving</button>
 
   <script src="thermostat.js"></script>
+
 </body>
 </html>
