--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
       </section>
       <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
       <script src="src/thermostat.js"></script>
+      <link rel="stylesheet" href="style.css">
     </body>
 </html>
