Extract temperature from weather API

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title> Thermostat </title>
   </head>
     <body>
+      <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+      <script src="src/thermostat.js"></script>
       <section>
         <h1>Temperature: <div id="temperature"></div></h1>
         <div>
@@ -15,9 +17,8 @@
           </ul>
       </div>
       Powersave: <div id="powersave"></div>
+      Current weather: <div id="weather"></div>
       </section>
-      <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-      <script src="src/thermostat.js"></script>
       <link rel="stylesheet" href="style.css">
     </body>
 </html>
