Implemented html and linking with css

--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,18 @@
   <title>Thermostat</title>
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="interface.js"></script>
+  <link rel="stylesheet" type="text/css" href="color.css">
   <h1>Welcome to the most advanced Thermostat of the Cosmos!</h1>
   <h2>You can easily use it with the below buttons</h2>
 </head>
 <body>
   <h2 id="temperature"></h2>
   <button id="show">Show Temperature</button>
-  <button id="increse">Increase Temperature</button>
+  <button id="increase">Increase Temperature</button>
   <button id="decrease">Decrease Temperature</button>
   <button id="reset">Reset Temperature</button>
-  <button id="SwitchPowerSaving">Power Saving</button>
+  <h2>Power saving status is : </h2><h2 id="powersavingstatus"></h2>
+  <button id="powersaving">Power Saving</button>
 
   <script src="thermostat.js"></script>
 
