ch 7 was finished with jQuery

--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,12 @@
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="interface.js"></script>
   <link rel="stylesheet" type="text/css" href="color.css">
+<div id="header_div">
   <h1>Welcome to the most advanced Thermostat of the Cosmos!</h1>
-  <h2>You can easily use it with the below buttons</h2>
+  <h2>You can easily use it with the below buttons</h2></div>
 </head>
 <body>
   <h2 id="temperature"></h2>
-  <button id="show">Show Temperature</button>
   <button id="increase">Increase Temperature</button>
   <button id="decrease">Decrease Temperature</button>
   <button id="reset">Reset Temperature</button>
