city ID was added staticly

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,8 @@
   <button id="reset">Reset Temperature</button>
   <h2>Power saving status is : </h2><h2 id="powersavingstatus"></h2>
   <button id="powersaving">Power Saving</button>
+  <h2>Current Weather in London </h2>
+  <h1 id="current"><h1>
 
   <script src="thermostat.js"></script>
 
