First city choice code

--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,19 @@
 </head>
 <body>
   <h2 id="temperature"></h2>
-  <button id="increase">Increase Temperature</button>
-  <button id="decrease">Decrease Temperature</button>
-  <button id="reset">Reset Temperature</button>
+    <button id="increase">Increase Temperature</button>
+    <button id="decrease">Decrease Temperature</button>
+    <button id="reset">Reset Temperature</button>
   <h2>Power saving status is : </h2><h2 id="powersavingstatus"></h2>
-  <button id="powersaving">Power Saving</button>
-  <h2>Current Weather in London </h2>
+    <button id="powersaving">Power Saving</button>
+  <h2>Current Weather in </h2>
+  <h2><p id="city"></p></h2>
   <h1 id="current"><h1>
-
+  <select id="cityselect">
+    <option value="Istanbul">Istanbul</option>
+    <option value="Antalya">Antalya</option>
+    <option value="London">London</option>
+  </select>
   <script src="thermostat.js"></script>
 
 </body>
