Dropdown menu for user input city

--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,10 @@
   <h2>Power saving status is : </h2><h2 id="powersavingstatus"></h2>
     <button id="powersaving">Power Saving</button>
   <h2>Current Weather in </h2>
-  <h2><p id="city"></p></h2>
+  <h2><p id="citydisplay"></p></h2>
   <h1 id="current"><h1>
   <select id="cityselect">
+    <option value="">Choose your city</option>
     <option value="Istanbul">Istanbul</option>
     <option value="Antalya">Antalya</option>
     <option value="London">London</option>
