--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,12 @@
     <button id="reset">Reset Temperature</button>
   <h2>Power saving status is : </h2><h2 id="powersavingstatus"></h2>
     <button id="powersaving">Power Saving</button>
+
+    <input type="range" id="slider" min="10" value="20" max="32" step="1" onchange="showValue(this.value)">
+<h2 id="rosie"></h2>
   <h2>Current Weather in </h2>
   <h2><p id="citydisplay"></p></h2>
-  <h1 id="current"><h1>
+  <h1 id="current"></h1>
   <select id="cityselect">
     <option value="">Choose your city</option>
     <option value="Istanbul">Istanbul</option>
